--- a/rayon-core/Cargo.toml
+++ b/rayon-core/Cargo.toml
@@ -20,6 +20,7 @@ num_cpus = "1.2"
 crossbeam-channel = "0.5.0"
 crossbeam-deque = "0.8.1"
 crossbeam-utils = "0.8.0"
+dashmap = "5.1.0"
 
 [dev-dependencies]
 rand = "0.8"
