--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ docopt = "1"
 lazy_static = "1"
 rand = "0.8"
 rand_xorshift = "0.3"
+async-io = "1.6.0"
 
 [dev-dependencies.serde]
 version = "1.0.85"
