--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ lazy_static = "1"
 rand = "0.8"
 rand_xorshift = "0.3"
 async-io = "1.6.0"
+async-recursion = "1.0.0"
+clap = { version = "3.1.3", features = ["derive"] }
 
 [dev-dependencies.serde]
 version = "1.0.85"
