--- a/rayon-core/Cargo.toml
+++ b/rayon-core/Cargo.toml
@@ -21,6 +21,7 @@ crossbeam-channel = "0.5.0"
 crossbeam-deque = "0.8.1"
 crossbeam-utils = "0.8.0"
 dashmap = "5.1.0"
+pin-utils = "0.1.0"
 
 [dev-dependencies]
 rand = "0.8"
