--- a/rayon-core/Cargo.toml
+++ b/rayon-core/Cargo.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0/MIT"
 repository = "https://github.com/rayon-rs/rayon"
 documentation = "https://docs.rs/rayon/"
 edition = "2018"
-links = "rayon-core"
+# links = "rayon-core"
 build = "build.rs"
 readme = "README.md"
 keywords = ["parallel", "thread", "concurrency", "join", "performance"]
